# connect4-webapp

./: Dockerfile  README.md
backend/: Cargo.toml  Rocket.toml
backend/src/: command_line_interface.rs  main.rs
backend/src/api/: board_api.rs  hist_api.rs  mod.rs  user_api.rs
backend/src/models/: board_model.rs  general_model.rs  mod.rs  user_model.rs
backend/src/repository/: board_repo.rs  db_type.rs  hist_repo.rs  mod.rs  mongodb_repo.rs  user_repo.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs
frontend/src/user/: general_elements.rs  mod.rs  router.rs  settings.rs
