[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
serde = "1.0.136"
dotenv = "0.15.0"
rust-argon2 = "1.0.0"
rand = "0.8.5"
chrono = "0.4.24"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 